--- a/Poisson regression model.ipynb
+++ b/Poisson regression model.ipynb
@@ -309,14 +309,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "The final values for w = [0.13592085 0.47761596 0.21050182]\nThe final value for b = 2.4986543013685654\nThe final value for error = -25.259679024522036\n"
+      "The final values for w = [0.13592085 0.47761596 0.21050182]\nThe final value for b = 2.4986543013685654\n"
      ]
     }
    ],
