:memo: Adding blog links

--- a/Poisson regression model.ipynb
+++ b/Poisson regression model.ipynb
@@ -181,7 +181,7 @@
   {
    "source": [
     "### The $loss$ function\n",
-    "If we want to find the best $w$ and $b$ we need some way to know how good the ones we have are, that is why we use the $loss$ function which we found in my blog post **wink wink**, and we know \n",
+    "If we want to find the best $w$ and $b$ we need some way to know how good the ones we have are, that is why we use the $loss$ function which we found in my [blog post](https://ximenasandoval.github.io/2020/10/31/poisson.html) **wink wink**, and we know \n",
     "$$loss = \\frac{1}{m} \\sum^{m}_{i = 1}\\hat{y}^{(i)} - log(\\hat{y}^{(i)})y^{(i)}$$\n",
     "\n",
     "But we also know it's better to do this in a matricial way, so we will do it as it follows"
@@ -207,7 +207,7 @@
   {
    "source": [
     "### Gradient Descent Algorithm\n",
-    "Alright! Now we can start talking about the Gradient Descent algorithm first we need to find the gradient with respect $w$ and $b$, which we also talked about in my blog **wink wink**. \n",
+    "Alright! Now we can start talking about the Gradient Descent algorithm first we need to find the gradient with respect $w$ and $b$, which we also talked about in my [blog](https://ximenasandoval.github.io/2020/10/31/poisson.html) **wink wink**. \n",
     "\n",
     "Anyways, we found that we can calculate the gradient as \n",
     "$$\n",
